--- a/resume.tex
+++ b/resume.tex
@@ -7,12 +7,12 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{Bin Yuan}
+\name{Mingyu Tong}
 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
+  \email{tongmy@gmail.com} \textperiodcentered\ 
+  \phone{(+86) 139-571-56242} \textperiodcentered\ 
+  \linkedin[童明宇]{https://www.linkedin.cn/in/%E6%98%8E%E5%AE%87-%E7%AB%A5-045315161}}
 
 \section{\faGraduationCap\ Education}
 \datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
